--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "iconistic",
   "version": "1.0.0",
   "description": "",
-  "author": "2LStudioss",
+  "author": "Sammwy",
   "license": "ISC"
 }
