--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iconistic",
   "version": "1.0.0",
-  "description": "",
+  "description": "Meet iconistic! An icon set with 150+ free icons for yours projects",
   "author": "Sammwy",
   "license": "ISC"
 }
